--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Plain Portfolio</title>
     <link rel="stylesheet" href="/css/styles.css">
+    <script src="https://cdn.jsdelivr.net/npm/p5@1.0.0/lib/p5.js"></script>
+    <script src="/js/sketch.js"></script>
 </head>
 
 <body>
@@ -54,7 +56,7 @@
             <h1 class="sticky">Contact</h1>
         </section>
     </main>
-    <script src="./js/main.js"></script>
+    <div id="sketch"></div>
 </body>
 
 </html>
